--- a/data/paper.tex
+++ b/data/paper.tex
@@ -2,7 +2,9 @@
 \begin{paper}
 \begin{enumerate}
   \item \textbf{Tao Jiang}, Dan Hu, and Xianchuan Yu.  Enhanced IT2FCM algorithm using object-based triangular fuzzy set modeling for remote-sensing clustering[J]. Computers \& geosciences, 2018, 118: 14-26. (SCI 三区收录, 检索号:GQ6TC.)
-  \item Dan Hu, \textbf{Tao Jiang}, and Xianchuan Yu. The construction of non-convex fuzzy sets. 2017 13th International Conference on Natural Computation, Fuzzy Systems and Knowledge  Discovery (ICNC-FSKD), Guilin, 2017, pp. 1175-1181. (EI 收录, 检索号:20183005590187.)\\
+  \item Dan Hu, \textbf{Tao Jiang}, and Xianchuan Yu. The construction of non-convex fuzzy sets. 2017 13th International Conference on Natural Computation, Fuzzy Systems and Knowledge  Discovery (ICNC-FSKD), Guilin, 2017, pp. 1175-1181. (EI 收录, 检索号:20183005590187.)
+  \item Haihua Xing, Hui He, Xianchuan Yu, Dan Hu, \textbf{Tao Jiang}.  An Interval Type-2 Fuzzy Sets Generation Method for Remote Sensing Imagery Classification[J]. Computers \& geosciences, 2019.(SCI 三区， accept)\\
+
   \end{enumerate}
 
 \end{paper}
