修改论文名字

--- a/data/chap03.tex
+++ b/data/chap03.tex
@@ -133,7 +133,7 @@
     \item\textsl{对称性}： $d_I(\tilde{A}, \tilde{B}) = d_I(\tilde{B}, \tilde{A})$
     \item  \textsl{三角不等式}： $d_I(\tilde{A}, \tilde{C}) \leq d_I(\tilde{A}, \tilde{B}) + d_I(\tilde{B}, \tilde{C})$
 \end{enumerate}
-证明过程较复杂，可参考本文作者已发表文章\cite{jiang2018enhanced} 的附录二。
+证明过程较复杂且非文章研究重点，可参考本文作者已发表文章\cite{jiang2018enhanced} 的附录二。
 
 综上所述，本节针对面向对象分割单元定义了TFSV 数据模型，同时，结合模糊集与可能性分布定理特性，针对新提出的TFSV 数据类型，本文新提出了一种区间值的距离度量方法，来度量两个TFSV 数据间的相似性。
 
