--- a/data/chap04.tex
+++ b/data/chap04.tex
@@ -8,7 +8,7 @@
 \label{cha:chap04}
 
 \section{引言}
-深度学习方法通过组合低阶特征形成更加抽象的高阶表示，基于全卷积架构的语义分割方法其多层的卷积网络结构可以完成对输入图像特征的自动学习。全卷积网络分割模型使用反卷积的上采样策略将特征图恢复到原始图像尺寸，完成对输入图像的像素级分类。然而，上采样过程造成了特征的损失，导致预测结果边界模糊的问题。另外，遥感影像由于其固有的信息不确定性，分类预测中地物边界模糊、歧义性等问题更加严重，全卷积语义分割方法在遥感影像分类中无法取得更佳的分类精度。
+深度学习方法通过组合低阶特征形成更加抽象的高阶表示，基于全卷积架构的语义分割方法其多层的卷积网络结构可以完成对输入图像特征的自动学习。全卷积网络分割模型使用反卷积的上采样策略将特征图恢复到原始图像尺寸，完成对输入图像的像素级分类。然而，上采样过程造成了特征的损失，导致预测结果边界模糊的问题。另外，高分影像由于细节特征复杂，全卷积网络分割结果同类地物不够连续，导致地物边界模糊、歧义性等问题更加严重，且同类地物内部像素难以保持类别一致性。
 %同时，现有模型通常对每个像素类别进行预测，像素级别的准确率可能会很高，但是像素与像素之间的相关关系容易忽略，使得分割结果不够连续或者某个物体在分割结果中尺寸、形状与ground truth 图中的形状、尺寸差别较大。
 
 生成对抗网络（Generative Adversarial Networks，GAN）训练时生成器（Genenrator）与判别器（Discriminator）不断对抗博弈，网络迭代好时判别器无法判断来源为生成器生成结果还是Ground truth 图，此时生成网络具有强大的图像生成能力\cite{luc2016semantic} 。本章将对抗网络应用到全卷积图像分割中，使得分割结果能够产生更好的地物边界，同类别物体空间上具有一致性。
@@ -383,14 +383,14 @@ Vaihingen 影像数据集各通道的像素点取值在$[0,255]$ 范围内，像
 
 本章提出的方法是将全卷积分割方法与条件生成对抗网络模型结果，利用CGAN 模型优秀的生成能力获得更精细、准确的地物分割边界，实验中采用的是融合DSM 数据的四波段影像数据，参考的实验方法为经典的FCN 语义分割方法。下面分别从精确量化和目视评估两个角度对Vaihingen 数据集上的地物分割识别结果进行比较。
 
-表\ref{tab:seg_refult} 展示了文中提出的基于CGAN 的分割方法和FCN 分割方法的分割精度，分别统计了地面、低矮植被、树木、建筑物、车辆五类地物（背景未计算）的分割精度，整幅图片中五类地物总体精度和MIoU 指标。从分类精度可知，两种方法对地面、树木和建筑物均有较好的识别精度，低矮植被易与背景中阴影混淆，故整体识别精度较低，车辆分类精度也不高，这与样本中车辆所占像素面积少，存在该类别样本数不多相关。文中提出的基于CGAN 的分割方法在“建筑物”这个类别地物识别精度最高，为 $87.64\%$ ，相比FCN 分割方法的$83.96\%$ ，有约$4\%$ 的绝对精度提升。而对FCN 分割中精度较低的“低矮植被”地物，分割精度由$63.39\%$ 大幅提升到$74.47\%$，该类别识别精度提升幅度达$10\%$，提升原因一方面是方法中使用DSM 波段数据能量化区分低矮植被与阴影的高度特征差异，较好得区分二者，另一方面则是基于CGAN 的分割方法对地物的边界有更准确的生成能力。本文提出基于CGAN 的分割方法OA 为$80.15\%$，MIoU 为$61.83\%$，相比FCN 分割算法中$78.48\%$ 的OA 和$58.42\%$ 的MIoU， 均有一定程度的提升。
+表\ref{tab:seg_refult} 展示了文中提出的基于CGAN 的分割方法和FCN 分割方法的分割精度，分别统计了地面、低矮植被、树木、建筑物、车辆五类地物（背景未计算）的分割精度，整幅图片中五类地物总体精度和mIoU 指标。从分类精度可知，两种方法对地面、树木和建筑物均有较好的识别精度，低矮植被易与背景中阴影混淆，故整体识别精度较低，车辆分类精度也不高，这与样本中车辆所占像素面积少，存在该类别样本数不多相关。文中提出的基于CGAN 的分割方法在“建筑物”这个类别地物识别精度最高，为 $87.64\%$ ，相比FCN 分割方法的$83.96\%$ ，有约$4\%$ 的绝对精度提升。而对FCN 分割中精度较低的“低矮植被”地物，分割精度由$63.39\%$ 大幅提升到$74.47\%$，该类别识别精度提升幅度达$10\%$，提升原因一方面是方法中使用DSM 波段数据能量化区分低矮植被与阴影的高度特征差异，较好得区分二者，另一方面则是基于CGAN 的分割方法对地物的边界有更准确的生成能力。本文提出基于CGAN 的分割方法OA 为$80.15\%$，mIoU 为$61.83\%$，相比FCN 分割算法中$78.48\%$ 的OA 和$58.42\%$ 的mIoU， 均有一定程度的提升。
 
 \begin{table}[htbp]
   \caption{Vaihingen 数据分割精度评估表}\label{tab:seg_refult}
   \centering
   \begin{tabular}{ccccccccc}
     \toprule
-    方法              & 地面 & 低矮植被 & 树木 & 建筑物 & 车辆 & OA & MIoU \\
+    方法              & 地面 & 低矮植被 & 树木 & 建筑物 & 车辆 & OA & mIoU \\
     \midrule
     FCN 分割      & $81.14\%$ & $63.39\%$ & $79.52\%$ & $83.96\%$ & $62.39\%$   & $78.48\%$ & $58.42\%$ \\
     基于CGAN 分割 & $83.78\%$ & $74.47\%$ & $82.40\%$ & $87.64\%$ & $78.83\%$ & $80.15\%$ & \textbf{$61.83\%$} \\
@@ -413,14 +413,14 @@ Vaihingen 影像数据集各通道的像素点取值在$[0,255]$ 范围内，像
   \caption{DSM 波段对影像分类结果的影响}\label{fig:dsm_affect}
 \end{figure}
 
-文中使用的训练样本为三波段正射影像与一波段DSM 的融合数据。下文实验比较了DSM 数据对实验结果的影响。DSM 数据包含地形起伏和地物高度相关的高程信息，“道路”、“低矮植被”和“建筑物”容易受不同地形、高度变化导致地物的特征起伏变化打，融合DSM 特征后更利于区分这些地物。图\ref{fig:dsm_affect} 中比较了正射影像是否融合DSM 数据对分割结果的影响。如图中红框区域为“建筑物”与“地面阴影”交叉部分，没有DSM 高程数据的分割模型中，将部分“阴影”了别错分为“树木”类别，同时，“建筑物”类别的边界也不完整。融合影像输入数据的分割结果则较好地解决了受高度特征影响的地物错分问题，尽可能保证“建筑物”边界的明确和完整。表\ref{tab:dsm_affect} 则统计了有无DSM 波段的数据源对实验分割精度的影响，通过对五类地物的分类精度、OA和MIoU 指标的对比，我实验返现输入数据加入DSM 波段后，“低矮植被”的分类精度提升最大，相比初始的$72.68\%$ 提升了$1.72\%$，达到$82.40\%$。整体的分类精度也由$79.52\%$ 提升到$80.15\%$。因此，融合DSM 高程信息数据能得到更优秀的分割精度和分割效果。
+文中使用的训练样本为三波段正射影像与一波段DSM 的融合数据。下文实验比较了DSM 数据对实验结果的影响。DSM 数据包含地形起伏和地物高度相关的高程信息，“道路”、“低矮植被”和“建筑物”容易受不同地形、高度变化导致地物的特征起伏变化打，融合DSM 特征后更利于区分这些地物。图\ref{fig:dsm_affect} 中比较了正射影像是否融合DSM 数据对分割结果的影响。如图中红框区域为“建筑物”与“地面阴影”交叉部分，没有DSM 高程数据的分割模型中，将部分“阴影”了别错分为“树木”类别，同时，“建筑物”类别的边界也不完整。融合影像输入数据的分割结果则较好地解决了受高度特征影响的地物错分问题，尽可能保证“建筑物”边界的明确和完整。表\ref{tab:dsm_affect} 则统计了有无DSM 波段的数据源对实验分割精度的影响，通过对五类地物的分类精度、OA和mIoU 指标的对比，我实验返现输入数据加入DSM 波段后，“低矮植被”的分类精度提升最大，相比初始的$72.68\%$ 提升了$1.72\%$，达到$82.40\%$。整体的分类精度也由$79.52\%$ 提升到$80.15\%$。因此，融合DSM 高程信息数据能得到更优秀的分割精度和分割效果。
 
 \begin{table}[htbp]
   \caption{DSM 波段对分割精度的影响}\label{tab:dsm_affect}
   \centering
   \begin{tabular}{ccccccccc}
     \toprule
-   数据源             & 地面 & 低矮植被 & 树木 & 建筑物 & 车辆 & OA & MIoU \\
+   数据源             & 地面 & 低矮植被 & 树木 & 建筑物 & 车辆 & OA & mIoU \\
     \midrule
     正射影像     & $83.27\%$ & $72.68\%$ & $82.61\%$ & $86.33\%$ & $78.20\%$   & $79.52\%$ & $60.96\%$ \\
     正射影像+DSM & $83.78\%$ & $74.47\%$ & $82.40\%$ & $87.64\%$ & $78.83\%$ & $80.15\%$ & \textbf{$61.83\%$} \\
@@ -430,4 +430,4 @@ Vaihingen 影像数据集各通道的像素点取值在$[0,255]$ 范围内，像
 
 \section{本章小结}
 \label{sec:forth}
-遥感影像固有的不确定性使得地物边界难以区分，同时，全卷积语义分割上采样过程会损失影像的特征细节，导致遥感影像地物边界更加难以划分。本章提出的方法将生成对抗网络的思想应用到全卷积分割模型中，借助CGAN 网络强大的图像生成能力，使得影像分割结果具有更明确的边界，同类别地物空间上具有一致性。将文中提出的基于CGAN 的分割方法应用到Vaihingen 影像数据分割实验上，可视化的分割结果和量化的评估精度均表明文中提出的方法相比传统FCN 语义分割方法有着更好的分割效果。另外，融合DSM 波段高程信息的输入数据，可以进一步识别特征相近的不同地物类别。
+高分影像固有的不确定性和复杂的类内特征使得地物边界难以区分，同时，全卷积语义分割上采样过程会损失影像的特征细节，导致遥感影像地物边界更加难以划分。本章提出的方法将生成对抗网络的思想应用到全卷积分割模型中，借助CGAN 网络强大的图像生成能力，使得影像分割结果具有更明确的边界，同类别地物空间上具有一致性。将文中提出的基于CGAN 的分割方法应用到Vaihingen 影像数据分割实验上，可视化的分割结果和量化的评估精度均表明文中提出的方法相比传统FCN 语义分割方法有着更好的分割效果。另外，融合DSM 波段高程信息的输入数据，可以进一步识别特征相近的不同地物类别。
