--- a/data/chap05.tex
+++ b/data/chap05.tex
@@ -9,9 +9,9 @@
 
 \section{本文的主要内容}
 \label{sec:5-1}
-遥感影像地物分类是遥感研究领域内一个重要问题，如何对地物类别正确识别、明确不同地物边界问题一直是一个研究热点。本文在遥感影像地物分类方面从两个角度提出了现有地物分类方法的改进方法，且对提出的方法分别进行理论推导和实验论证。针对遥感影像数据同物异谱、同谱异物等固有不确定性的特点，设计三角形模糊集值信息表达模型来表征影像数据特征，提出TFSV-IT2FCM 模糊聚类方法用于高分影像的地物无监督聚类分割识别。针对全卷积影像语义分割模糊地物类别的不足，结合CGAN 优秀的图像生成能力，提出基于CGAN 的分割方法来得到清晰、明确的地物分类边界。将文中提出的两种方法分别用于遥感影像地物分类实验中，实验结果均表明相比已有方法，新提出的影像分割方法提高了地物分类的精度，能得到更准确的地物分类边界。具体工作如下：
+遥感影像地物分类是遥感研究领域内一个重要问题，如何对地物类别正确识别、明确不同地物边界问题一直是一个研究热点。本文从两个角度提出了现有高分影像地物分类方法的改进方法，且对提出的方法分别进行理论推导和实验论证。针对遥感影像数据同物异谱、同谱异物等固有不确定性的特点，设计三角形模糊集值信息表达模型来表征影像数据特征，提出TFSV-IT2FCM 模糊聚类方法用于高分影像的地物无监督聚类分割识别。针对全卷积影像语义分割中高分影像地物类别一致性问题，文中结合CGAN 优秀的图像生成能力，提出了基于CGAN 的全卷积分割方法来得到清晰、明确的地物分类边界。将文中提出的两种方法分别用于遥感影像地物分类实验中，实验结果均表明相比已有方法，新提出的影像分割方法提高了地物分类的精度，能得到更准确的地物分类边界。具体工作如下：
 \begin{enumerate}[(1)]
-  \item 针对遥感影像数据固有的不确定性，设计三角形模糊集值表达模型提取影像特征。对于新设计的模糊集值模型，提出一种新的区间值度量方法，刻画两个三角形模糊集值间的相似度。利用新提取的数据模型和距离度量方法改进现有面向对象的遥感影像模糊聚类分割方法，提出TFSV-IT2FCM 聚类分割算法。在 SPOT 5和高分二号影像上进行地物聚类分割均证明了文中提出的TFSV-IT2FCM 算法的有效性，其确实能识别近似光谱特征的不同地物，实现更好的分割识别结果。
+  \item 针对遥感影像数据固有的不确定性，设计三角形模糊集值表达模型提取影像特征。对于新设计的模糊集值模型，提出一种新的区间值距离，度量两个三角形模糊集值间的相似度。利用新提取的数据模型和距离度量改进现有面向对象的遥感影像模糊聚类分割方法，提出TFSV-IT2FCM 聚类分割算法。在 SPOT 5和高分二号影像上进行地物聚类分割均证明了文中提出的TFSV-IT2FCM 算法的有效性，其确实能识别近似光谱特征的不同地物，实现更好的分割识别结果。
   \item 针对全卷积分割方法中上采样特征损失的问题，结合对抗网络的思想，提出基于CGAN 的全卷积语义分割方法。同时，融合正射影像和DSM 高程信息数据用于模型训练。在Vaihingen 影像数据上的实验结果表明新的分割方法能够得到更好的地物分割边界，且同一类别的地物具有更好的空间一致性。
 \end{enumerate}
 
