--- a/data/chap05.tex
+++ b/data/chap05.tex
@@ -11,14 +11,14 @@
 \label{sec:5-1}
 遥感影像地物分类是遥感研究领域内一个重要问题，如何对地物类别正确识别、明确不同地物边界问题一直是一个研究热点。本文从两个角度提出了现有高分影像地物分类方法的改进方法，且对提出的方法分别进行理论推导和实验论证。针对遥感影像数据同物异谱、同谱异物等固有不确定性的特点，设计三角形模糊集值信息表达模型来表征影像数据特征，提出TFSV-IT2FCM 模糊聚类方法用于高分影像的地物无监督聚类分割识别。针对全卷积影像语义分割中高分影像地物类别一致性问题，文中结合CGAN 优秀的图像生成能力，提出了基于CGAN 的全卷积分割方法来得到清晰、明确的地物分类边界。将文中提出的两种方法分别用于遥感影像地物分类实验中，实验结果均表明相比已有方法，新提出的影像分割方法提高了地物分类的精度，能得到更准确的地物分类边界。具体工作如下：
 \begin{enumerate}[(1)]
-  \item 针对遥感影像数据固有的不确定性，设计三角形模糊集值表达模型提取影像特征。对于新设计的模糊集值模型，提出一种新的区间值距离，度量两个三角形模糊集值间的相似度。利用新提取的数据模型和距离度量改进现有面向对象的遥感影像模糊聚类分割方法，提出TFSV-IT2FCM 聚类分割算法。在 SPOT 5和高分二号影像上进行地物聚类分割均证明了文中提出的TFSV-IT2FCM 算法的有效性，其确实能识别近似光谱特征的不同地物，实现更好的分割识别结果。
-  \item 针对全卷积分割方法中上采样特征损失的问题，结合对抗网络的思想，提出基于CGAN 的全卷积语义分割方法。同时，融合正射影像和DSM 高程信息数据用于模型训练。在Vaihingen 影像数据上的实验结果表明新的分割方法能够得到更好的地物分割边界，且同一类别的地物具有更好的空间一致性。
+  \item 针对遥感影像数据固有的不确定性，设计三角形模糊集值表达模型提取影像特征。对于新设计的TFSV 数据模型，提出新的区间值距离度量两个TFSV 数据间的相似度。利用新提取的数据模型和距离度量改进现有面向对象的遥感影像模糊聚类分割方法，提出TFSV-IT2FCM 聚类分割算法。在 SPOT 5和高分二号影像上进行地物聚类分割均证明了文中提出的TFSV-IT2FCM 算法的有效性，其确实能识别近似光谱特征的不同地物，实现更好的分割识别结果。
+  \item 针对全卷积分割方法中上采样特征损失的问题，结合对抗网络的思想，提出基于CGAN 的全卷积语义分割方法。另外，正射影像波段和DSM 高程波段数据融合用于模型训练。在Vaihingen 影像数据上的实验结果表明新的分割方法能够得到更好的地物分割边界，且同一类别的地物具有更好的空间一致性。
 \end{enumerate}
 
 
 \section{未来的期望}
 \label{sec:5-2}
-本文提出的两种方法，一定程度上均能改进遥感影像地物分类边界划分问题，对提高影像分类的识别精度有所提高。今后的研究工作还可以从以下几个方面进行探究和改进：
+本文提出的两种方法，一定程度上均能改进遥感影像地物分类边界划分问题，对提高影像分类的识别精度有所提高。之后的研究可从以下方面开展：
 \begin{enumerate}[(1)]
   \item  第\ref{cha:chap03} 章提出的模糊聚类分割方法使用最简单的三角形模糊集对数据特征建模，使用其他类型模糊集（如梯形、钟形模糊集）对影像单元建模可以展开进一步的研究。
   \item  第\ref{cha:chap04} 章提出的基于CGAN 分割方法在识别“车辆”时相对其他几类地物精度较低，原因主要是训练集影像中含有“车辆”的像素点占比较低，后续研究中构建模型目标函数时可以考虑给像素占比低的地物一个较高的权值，研究加权后的交叉熵代价能否提高像素占比小地物的识别效果。
